@@ -35,7 +35,7 @@
   <property name="component.title"         value="Tacit Knowledge AutoPatch"/>
 
   <!-- The current version number of this application -->
-  <property name="component.version"       value="1.0.0"/>
+  <property name="component.version"       value="1.1.0-cvs"/>
 
   <!-- The base directory for compilation targets -->
   <property name="build.home"              value="build"/>
