@@ -16,7 +16,10 @@ Version 1.0.1
   It has not received a great deal of testing yet.
   https://sourceforge.net/support/tracker.php?aid=1662010
   Thank you Alex Soto
-
+  
+- List of unapplied patches displayed prior to patching
+  https://sourceforge.net/support/tracker.php?aid=1658446
+  
 
 Version 1.0.0
 -------------
